--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,23 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
+}
+
+def allureVersion = "2.21.0",
+    selenideVersion = "6.19.1"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
 }
 
 repositories {
@@ -8,15 +26,22 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.19.1",
-            //"org.seleniumhq.selenium:selenium-java:4.14.1",
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.10.0",
-            "org.slf4j:slf4j-simple:2.0.7"
+            "org.slf4j:slf4j-simple:2.0.7",
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion"
     )
     testImplementation 'junit:junit:4.13.1'
 }
 
 test {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
