--- a/build.gradle
+++ b/build.gradle
@@ -47,12 +47,12 @@ tasks.withType(Test) {
 
 task simple_test(type: Test) {
     useJUnitPlatform {
-        includeTags("simple")
+        includeTags("formTest")
     }
 }
 
-task demoqa_test(type: Test) {
-    useJUnitPlatform {
-        includeTags("demoqa")
-    }
+//task demoqa_test(type: Test) {
+//    useJUnitPlatform {
+//        includeTags("demoqa")
+//    }
 }
