--- a/src/test/resources/config/remote.properties
+++ b/src/test/resources/config/remote.properties
@@ -2,5 +2,5 @@ browser=CHROME
 browserVersion=100.0
 browserSize=1366x768
 isRemote=true
-baseUrl=https://demoqa.com1
+baseUrl=https://demoqa.com
 remote=https://user1:1234@selenoid.autotests.cloud/wd/hub/
